2015-11-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/html/classic/img/group.svg, src/html/classic/img/role.svg,
	src/html/classic/img/user.svg: New.

	* CMakeLists.txt: Install the new icons.

2015-11-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Introduce new style for help pages, compatible with the new style
	of the overview pages.
 
	* src/html/classic/img/help.svg: New.

	* CMakeLists.txt: Install the new help icon.

	* src/html/classic/css/gsa-style.css: Add definitions for h1 and h2 of
	section-header where so far only h3 was defined. Also add an (so far)
	empty section-box to be used in a box below a section header.
	Finally added small-icon for 16x16 version of SVG icons.

	* src/html/classic/help.xsl (help-header): New macro for the head of help pages.
	Changed all of the pages to use the new header. Some links like for "new" dialogs
	were removed as they don't make sense with the new gui.

2015-11-06  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-targets-table): Set position of
	credential sort order buttons to align them with dropdown and use
	"ascending" and "descending" icons for them. Reload page automatically
	on credential type selection using current order.

2015-11-06  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Merge columns for individual credential types in targets table
	into a single one with JS-based sort field selection.

	* src/html/classic/omp.xsl (filter-window-part): Allow to hide columns
	with a hide_in_filter element.
	(list-window): Allow to hide column with hide_in_table element. Add
	column headers without link if no field is given for a column.
	Allow HTML additions for all top level column headers.
	(html-targets-table, target): Merge columns for individual credential
	types into a single one with JS-based sort field selection.

2015-11-05  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* src/html/classic/gsa-style.css, src/html/classic/omp.xsl,