@@ -1,3 +1,11 @@
+2015-11-08  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/html/classic/css/gsa-style.css: Added icon element for section header.
+
+	* src/html/classic/omp.xsl (resource-permissions-window): Replace "gw_window"
+	style by the section style with a horizontal line. Moved the icons right
+	hand above the line. Made the section collapsable.
+
 2015-11-07  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* src/html/classic/img/group.svg, src/html/classic/img/role.svg,
